dhall/tests/type-inference/failure/unit/MergeBool.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:43
  |
1 | \(x: { True: Natural, False: Natural }) -> merge x True
  |                                            ^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
